# My_HomeKit

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.c
